--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="image to pdf , multiple images to pdf , online image to pdf, image to pdf online , image to pdf converter">
     <meta name="description" content="free image to pdf conversion with one click">
     <title>Image to pdf</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./dist/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="style.css">
     
     <script src="script.js" defer type="module"></script>
